# SMART_

./: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  DHT22.c  DHT22.h  app_nvs.c  aws_iot.c  aws_iot.h  http_server.c  http_server.h  main.c  sntp_time_sync.h  tasks_common.h  wifi_app.c  wifi_app.h
main/webpage/: app.css  app.js  index.html
