idf_component_register(SRCS "DHT22.c" "wifi_app.c" "main.c" "http_server.c" 
INCLUDE_DIRS "."
EMBED_FILES "webpage/app.css" "webpage/gastos.png" "webpage/kwh.png" "webpage/app.js" "webpage/favicon.ico" "webpage/index.html" "webpage/jquery-3.3.1.min.js" "webpage/custo.png" "webpage/potencia.png" "webpage/tensao.png" "webpage/corrente.png")